extends Control

var level


func return_level():
	return level


func _on_Level1_pressed():
	level = 1


func _on_Level2_pressed():
	level = 2


func _on_Level3_pressed():
	level = 3


func _on_Level4_pressed():
	level = 4


func _on_Level5_pressed():
	level = 5


func _on_Level6_pressed():
	level = 6


func _on_Level7_pressed():
	level = 7


func _on_Level8_pressed():
	level = 8
